LPS-151113 Fix elements are overlapping page

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/META-INF/resources/admin/js/pages/RuleList.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/META-INF/resources/admin/js/pages/RuleList.scss
@@ -19,11 +19,22 @@
 		font-size: 16px;
 	}
 
+	.inline-item {
+		max-width: 100%;
+	}
+
 	.inline-item-after {
 		margin-left: 0.3rem;
 	}
 
 	.inline-item-before {
 		margin-right: 0.3rem;
+	}
+
+	.text-truncate-inline {
+		.text-truncate {
+			white-space: normal;
+			word-wrap: break-word;
+		}
 	}
 }
